update index and add styles

--- a/index.html
+++ b/index.html
@@ -6,5 +6,102 @@
     <title>Kalkulator BMI</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header start -->
+    <header>
+      <h1>Kalkulator BMI</h1>
+    </header>
+    <!-- header end -->
+    <!-- Content start -->
+    <main>
+      <aside>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
+            vero repudiandae necessitatibus! Adipisci quo quam obcaecati
+            mollitia soluta similique. Error culpa aut nesciunt molestiae fuga
+            sit, quo consequuntur! Voluptatibus, similique!Lorem Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Velit delectus nam
+            optio eligendi soluta tempora eos amet? Magnam nesciunt voluptatem
+            neque reprehenderit vitae! Dolorum cum optio explicabo, quaerat
+            totam exercitationem. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Labore quam repellendus alias perferendis animi
+            dolore ut rerum eius beatae itaque, veniam sit doloremque
+            consequuntur ex recusandae corrupti illo soluta laudantium. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Amet, similique
+            doloribus rerum placeat quos rem distinctio odio delectus nisi?
+            Dolore eligendi dolores, quisquam similique animi quia odit beatae
+            error at!
+          </p>
+        </article>
+
+        <form action="" class="form-input">
+          <h3 class="text-center">Form Input</h3>
+          <div class="input-jk">
+            <label for="jenisKelamin">Jenis Kelamin</label><br />
+            <input type="radio" name="jenisKelamin" id="pria" value="pria" />
+            <label for="pria">Pria</label>
+            <input
+              type="radio"
+              name="jenisKelamin"
+              id="wanita"
+              value="wanita"
+            />
+            <label for="wanita">Wanita</label>
+          </div>
+
+          <div class="input-bb">
+            <label for="beratBadan">Berat Badan (kg)</label><br />
+            <input type="number" name="beratBadan" />
+          </div>
+
+          <div class="input-usia">
+            <label for="usia">Usia (tahun)</label><br />
+            <input type="number" name="usia" />
+          </div>
+
+          <div class="input-tb">
+            <label for="tinggiBadan">Tinggi Badan (cm)</label><br />
+            <input type="number" name="tinggiBadan" />
+          </div>
+
+          <div class="form-buttons">
+            <button type="button" class="submit">Hitung BMI</button>
+            <button type="reset" class="reset">Reset</button>
+          </div>
+        </form>
+
+        <article></article>
+      </aside>
+      <!-- split content -->
+      <aside>
+        <section>
+          <h3>Form Information</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
+            vero repudiandae necessitatibus! Adipisci quo quam obcaecati
+            mollitia soluta similique. Error culpa aut nesciunt molestiae fuga
+            sit, quo consequuntur! Voluptatibus, similique!Lorem Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Velit delectus nam
+            optio eligendi soluta tempora eos amet? Magnam nesciunt voluptatem
+            neque reprehenderit vitae! Dolorum cum optio explicabo, quaerat
+            totam exercitationem. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Labore quam repellendus alias perferendis animi
+            dolore ut rerum eius beatae itaque, veniam sit doloremque
+            consequuntur ex recusandae corrupti illo soluta laudantium. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Amet, similique
+            doloribus rerum placeat quos rem distinctio odio delectus nisi?
+            Dolore eligendi dolores, quisquam similique animi quia odit beatae
+            error at!
+          </p>
+        </section>
+      </aside>
+    </main>
+    <!-- content end -->
+    <!-- footer start -->
+    <footer>
+      <p>Copyright &copy; Akhmad Fauzan</p>
+    </footer>
+    <!-- footer end -->
+  </body>
 </html>
